--- a/source/layout.erb
+++ b/source/layout.erb
@@ -16,6 +16,6 @@
       <%= yield %>
     </section>
     
-    <%= javascript_include_tag "libraries","jquery.slideshow","site" %>
+    <%= javascript_include_tag "libraries","jquery.carousel","site" %>
   </body>
 </html>
