--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -1,4 +1,21 @@
-<% content_for :head do %>
+<div id="content-1" class="carousel section">
+  <% 10.times do |i| %>
+    <div style="background:<%= data.slides.colors[i] %>;" class="article">
+      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+    </div>
+  <% end %>
+</div>
+
+<div id="content-2" class="carousel section">
+  <% 10.times do |i| %>
+    <div style="background:<%= data.slides.colors[i] %>;" class="article">
+      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. </p>
+    </div>
+  <% end %>
+</div>
+
+
+<!-- <% content_for :head do %>
   <title>A Simple Jquery Slideshow</title>
 <% end %>
 <h1>Jquery Slideshow</h1>
@@ -19,7 +36,7 @@ speed: 300 // Animation speed for slide progression
 <section id="content" class="slideshow">
   <% 10.times do |i| %>
     <article class="slide">
-      <%= image_tag("slideshow-1/#{i + 1}.jpeg") %>
+      <%= image_tag("#{i + 1}.jpeg") %>
         <div class="caption">
           <p><%= data.slides.captions[i] %></p>
         </div>
@@ -30,7 +47,7 @@ speed: 300 // Animation speed for slide progression
 <section id="content-2" class="slideshow">
   <% 10.times do |i| %>
     <article class="slide">
-      <%= image_tag("slideshow-1/#{i + 1}.jpeg") %>
+      <%= image_tag("#{i + 1}.jpeg") %>
         <div class="caption">
           <p><%= data.slides.captions[i] %></p>
         </div>
@@ -41,10 +58,10 @@ speed: 300 // Animation speed for slide progression
 <section id="content-3" class="slideshow">
   <% 10.times do |i| %>
     <article class="slide">
-      <%= image_tag("slideshow-1/#{i + 1}.jpeg") %>
+      <%= image_tag("#{i + 1}.jpeg") %>
         <div class="caption">
           <p><%= data.slides.captions[i] %></p>
         </div>
     </article>
   <% end %>
-</section>
+</section> -->
