--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -1,3 +1,5 @@
+<h1>Jquery Carousel</h1>
+
 <div id="content-1" class="carousel section">
   <% 10.times do |i| %>
     <div style="background:<%= data.slides.colors[i] %>;" class="article">
