--- a/source/stylesheets/jquery.carousel.css.scss
+++ b/source/stylesheets/jquery.carousel.css.scss
@@ -1,10 +1,24 @@
 .carousel {
 	@include legacy-pie-clearfix();
 	margin:50px 0 0;
+	position:relative;
+	
+	
+	.window {
+		overflow:hidden;
+	}
+	
+	.stage {
+		width:9999px;
+	}
 	
 	.article {
 		float:left;
 		width:400px;
+		
+		& + .article {
+			margin-left:10px;
+		}
 	}
 	
 	.control-panel {
